tests/dfrouter/errors/unknown_option/errors.dfrouter
Error: On processing option '--test_this_funky_but_not_existing_option':
 No option with the name 'test_this_funky_but_not_existing_option' exists.
Error: Could not parse commandline options.
Quitting (on error).
